# libuv-extras

./: .gitignore  README.md  settings.gradle
.github/workflows/: CI.yml
android/: settings.gradle
android/libuv-demo/: build.gradle
android/libuv-demo/src/androidTest/java/com/example/libuv_demo/: ExampleInstrumentedTest.java
android/libuv-demo/src/main/: AndroidManifest.xml
android/libuv-demo/src/main/java/com/example/libuv_demo/: MainActivity.java
android/libuv-demo/src/main/res/layout/: activity_main.xml
android/libuv-demo/src/main/res/values/: strings.xml
android/libuv-demo/src/test/java/com/example/libuv_demo/: ExampleUnitTest.java
eventpool/: Makefile  README.md  eventpool.c  eventpool.h  main.c
gradle/wrapper/: gradle-wrapper.properties
libuv-demo/: build.gradle
libuv-demo/src/androidTest/java/com/example/libuv_demo/: ExampleInstrumentedTest.java
libuv-demo/src/main/: AndroidManifest.xml
libuv-demo/src/main/cpp/: CMakeLists.txt  native-lib.cpp
libuv-demo/src/main/java/com/example/libuv_demo/: MainActivity.java
libuv-demo/src/main/res/drawable/: ic_launcher_background.xml
libuv-demo/src/main/res/layout/: activity_main.xml
libuv-demo/src/main/res/values/: strings.xml
libuv-demo/src/test/java/com/example/libuv_demo/: ExampleUnitTest.java
